language_tests/source_files/invalid/deref.tr
// Test: deref of non-reference should fail.

func main() {
    let value = 1
    let _ = *value
}
